2003-03-05  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* cons.handler.c (set_attr) [__FreeBSD__]: Eliminate cmd array.

2003-03-05  Max Khon  <fjoe@iclub.nsu.ru>

	* cons.handler.c (console_init) [__FreeBSD__]: Fix the amount of
	allocated memory.
	(console_save) [__FreeBSD__]: Doesn't exit on error, just return.

2003-03-05  Pavel Roskin  <proski@gnu.org>

	* cons.handler.c (show_console_contents_freebsd): Rewrite
	to use screen library (S-Lang or ncurses).  Direct output is
	unreliable when the screen library is active.

2003-03-03  Pavel Roskin  <proski@gnu.org>

	* profile.c (load): Fix reading keys immediately after comments.

2003-02-26  Pavel Roskin  <proski@gnu.org>

	* cons.handler.c: Put checks for rxvt extensions in one place.
	Simplify FreeBSD code.

2003-02-26  Max Khon  <fjoe@iclub.nsu.ru>

	* cons.handler.c: Add implementation for FreeBSD 4.x and 5.x.

2003-02-26  Pavel Roskin  <proski@gnu.org>

	* view.c (load_view_file): Make sure view->s.st_size is not
	truncated when passed to g_malloc().
	Reported by Philipp Thomas <pthomas@suse.de>

2003-02-23  Dmitry Alexeyev  <dmi_a@qnx.org.ru>

	* key.c (get_modifier): Add support for QNX Neutrino console.

2003-02-23  Pavel Roskin  <proski@gnu.org>

	* key.c (init_key_x11): Don't try to use X11 if DISPLAY is not
	set in the environment.

2003-02-22  Pavel Tsekov  <ptsekov@gmx.net>

	* key.c: Add support for dynamic loading of libX11.

2003-02-21  Pavel Roskin  <proski@gnu.org>

	* utilunix.c (destroy_groups): Revert last change, it doesn't
	work with glib-1.2.x.

2003-02-19  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* option.c (init_configure): Use OTHER_OPTIONS consistently.
	By Mike Smithson <dooligan@intergate.ca>.

2003-02-18  Pavel Roskin  <proski@gnu.org>

	* util.c (list_append_unique): Free removed links.
	* utilunix.c (destroy_groups): Use g_tree_foreach() instead of
	obsolete g_tree_traverse().

	* util.c (list_append_unique): Traverse the list backwards.